crates/flowscope-core/tests/snapshots/snapshots__run_snowflake_snapshot_test@snowflake_reduce.snap
---
source: crates/flowscope-core/tests/snapshots.rs
expression: clean_result
---
{
  "statements": [
    {
      "statementIndex": 0,
      "statementType": "SELECT",
      "nodes": [
        {
          "id": "column_e936b87eb12ba397",
          "type": "column",
          "label": "SUM_RESULT",
          "expression": "REDUCE([1, 2, 3], 0, (acc, val) -> acc + val)"
        },
        {
          "id": "output_74d22f755ec62dbc",
          "type": "output",
          "label": "Output"
        }
      ],
      "edges": [
        {
          "id": "edge_8214e5c3760fd049",
          "from": "output_74d22f755ec62dbc",
          "to": "column_e936b87eb12ba397",
          "type": "ownership"
        }
      ],
      "joinCount": 0,
      "complexityScore": 1
    }
  ],
  "globalLineage": {
    "nodes": [
      {
        "id": "column_e936b87eb12ba397",
        "type": "column",
        "label": "SUM_RESULT",
        "canonicalName": {
          "name": "SUM_RESULT"
        },
        "statementRefs": [
          {
            "statementIndex": 0,
            "nodeId": "column_e936b87eb12ba397"
          }
        ]
      },
      {
        "id": "output_74d22f755ec62dbc",
        "type": "output",
        "label": "Output",
        "canonicalName": {
          "name": "Output"
        },
        "statementRefs": [
          {
            "statementIndex": 0,
            "nodeId": "output_74d22f755ec62dbc"
          }
        ]
      }
    ],
    "edges": [
      {
        "id": "edge_8214e5c3760fd049",
        "from": "output_74d22f755ec62dbc",
        "to": "column_e936b87eb12ba397",
        "type": "ownership",
        "producerStatement": {
          "statementIndex": 0
        }
      }
    ]
  },
  "issues": [
    {
      "severity": "warning",
      "code": "UNRESOLVED_REFERENCE",
      "message": "Column 'acc' referenced but no tables are currently in scope",
      "statementIndex": 0
    },
    {
      "severity": "warning",
      "code": "UNRESOLVED_REFERENCE",
      "message": "Column 'acc' referenced but no tables are currently in scope",
      "statementIndex": 0
    },
    {
      "severity": "warning",
      "code": "UNRESOLVED_REFERENCE",
      "message": "Column 'val' referenced but no tables are currently in scope",
      "statementIndex": 0
    },
    {
      "severity": "warning",
      "code": "UNRESOLVED_REFERENCE",
      "message": "Column 'val' referenced but no tables are currently in scope",
      "statementIndex": 0
    }
  ],
  "summary": {
    "statementCount": 1,
    "tableCount": 0,
    "columnCount": 1,
    "joinCount": 0,
    "complexityScore": 1,
    "issueCount": {
      "errors": 0,
      "warnings": 4,
      "infos": 0
    },
    "hasErrors": false
  }
}
